--- a/Lexer_Task_1/Lexer_Task_1/Lexer_Task_1.csproj
+++ b/Lexer_Task_1/Lexer_Task_1/Lexer_Task_1.csproj
@@ -58,6 +58,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CodeChecker.cs" />
     <Compile Include="KDA.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
